vcxproj: fix paths

--- a/libsox-ms/libsox.vcxproj
+++ b/libsox-ms/libsox.vcxproj
@@ -174,39 +174,39 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\custom-files\soxconfig.h" />
-    <ClInclude Include="adpcm.h" />
-    <ClInclude Include="adpcms.h" />
-    <ClInclude Include="aiff.h" />
-    <ClInclude Include="band.h" />
-    <ClInclude Include="biquad.h" />
-    <ClInclude Include="compandt.h" />
-    <ClInclude Include="cvsd.h" />
-    <ClInclude Include="cvsdfilt.h" />
-    <ClInclude Include="dft_filter.h" />
-    <ClInclude Include="dither.h" />
-    <ClInclude Include="effects.h" />
-    <ClInclude Include="fft4g.h" />
-    <ClInclude Include="fifo.h" />
-    <ClInclude Include="formats.h" />
-    <ClInclude Include="framework.h" />
-    <ClInclude Include="g711.h" />
-    <ClInclude Include="g72x.h" />
-    <ClInclude Include="id3.h" />
-    <ClInclude Include="ima_rw.h" />
-    <ClInclude Include="ladspa.h" />
-    <ClInclude Include="mcompand_xover.h" />
-    <ClInclude Include="noisered.h" />
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="rate_filters.h" />
-    <ClInclude Include="rate_half_fir.h" />
-    <ClInclude Include="rate_poly_fir.h" />
-    <ClInclude Include="rate_poly_fir0.h" />
-    <ClInclude Include="raw.h" />
-    <ClInclude Include="soxomp.h" />
-    <ClInclude Include="sox_i.h" />
-    <ClInclude Include="util.h" />
-    <ClInclude Include="vox.h" />
-    <ClInclude Include="xmalloc.h" />
+    <ClInclude Include="..\libsox\adpcm.h" />
+    <ClInclude Include="..\libsox\adpcms.h" />
+    <ClInclude Include="..\libsox\aiff.h" />
+    <ClInclude Include="..\libsox\band.h" />
+    <ClInclude Include="..\libsox\biquad.h" />
+    <ClInclude Include="..\libsox\compandt.h" />
+    <ClInclude Include="..\libsox\cvsd.h" />
+    <ClInclude Include="..\libsox\cvsdfilt.h" />
+    <ClInclude Include="..\libsox\dft_filter.h" />
+    <ClInclude Include="..\libsox\dither.h" />
+    <ClInclude Include="..\libsox\effects.h" />
+    <ClInclude Include="..\libsox\fft4g.h" />
+    <ClInclude Include="..\libsox\fifo.h" />
+    <ClInclude Include="..\libsox\formats.h" />
+    <ClInclude Include="..\libsox\framework.h" />
+    <ClInclude Include="..\libsox\g711.h" />
+    <ClInclude Include="..\libsox\g72x.h" />
+    <ClInclude Include="..\libsox\id3.h" />
+    <ClInclude Include="..\libsox\ima_rw.h" />
+    <ClInclude Include="..\libsox\ladspa.h" />
+    <ClInclude Include="..\libsox\mcompand_xover.h" />
+    <ClInclude Include="..\libsox\noisered.h" />
+    <ClInclude Include="..\libsox\pch.h" />
+    <ClInclude Include="..\libsox\rate_filters.h" />
+    <ClInclude Include="..\libsox\rate_half_fir.h" />
+    <ClInclude Include="..\libsox\rate_poly_fir.h" />
+    <ClInclude Include="..\libsox\rate_poly_fir0.h" />
+    <ClInclude Include="..\libsox\raw.h" />
+    <ClInclude Include="..\libsox\soxomp.h" />
+    <ClInclude Include="..\libsox\sox_i.h" />
+    <ClInclude Include="..\libsox\util.h" />
+    <ClInclude Include="..\libsox\vox.h" />
+    <ClInclude Include="..\libsox\xmalloc.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\libsox\8svx.c" />
