--- a/libsox-ms/libsox.vcxproj.filters
+++ b/libsox-ms/libsox.vcxproj.filters
@@ -27,103 +27,103 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="adpcms.h">
+    <ClInclude Include="..\libsox\adpcms.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="aiff.h">
+    <ClInclude Include="..\libsox\aiff.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="cvsd.h">
+    <ClInclude Include="..\libsox\cvsd.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="cvsdfilt.h">
+    <ClInclude Include="..\libsox\cvsdfilt.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="formats.h">
+    <ClInclude Include="..\libsox\formats.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="framework.h">
+    <ClInclude Include="..\libsox\framework.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="g72x.h">
+    <ClInclude Include="..\libsox\g72x.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="g711.h">
+    <ClInclude Include="..\libsox\g711.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="pch.h">
+    <ClInclude Include="..\libsox\pch.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="raw.h">
+    <ClInclude Include="..\libsox\raw.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="sox_i.h">
+    <ClInclude Include="..\libsox\sox_i.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="soxomp.h">
+    <ClInclude Include="..\libsox\soxomp.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="util.h">
+    <ClInclude Include="..\libsox\util.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="vox.h">
+    <ClInclude Include="..\libsox\vox.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="xmalloc.h">
+    <ClInclude Include="..\libsox\xmalloc.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="band.h">
+    <ClInclude Include="..\libsox\band.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="biquad.h">
+    <ClInclude Include="..\libsox\biquad.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="compandt.h">
+    <ClInclude Include="..\libsox\compandt.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="dft_filter.h">
+    <ClInclude Include="..\libsox\dft_filter.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="dither.h">
+    <ClInclude Include="..\libsox\dither.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="effects.h">
+    <ClInclude Include="..\libsox\effects.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="fft4g.h">
+    <ClInclude Include="..\libsox\fft4g.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="fifo.h">
+    <ClInclude Include="..\libsox\fifo.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="ladspa.h">
+    <ClInclude Include="..\libsox\ladspa.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="mcompand_xover.h">
+    <ClInclude Include="..\libsox\mcompand_xover.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="noisered.h">
+    <ClInclude Include="..\libsox\noisered.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="rate_filters.h">
+    <ClInclude Include="..\libsox\rate_filters.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="rate_half_fir.h">
+    <ClInclude Include="..\libsox\rate_half_fir.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="rate_poly_fir.h">
+    <ClInclude Include="..\libsox\rate_poly_fir.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="rate_poly_fir0.h">
+    <ClInclude Include="..\libsox\rate_poly_fir0.h">
       <Filter>Header Files\Effects</Filter>
     </ClInclude>
-    <ClInclude Include="id3.h">
+    <ClInclude Include="..\libsox\id3.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="ima_rw.h">
+    <ClInclude Include="..\libsox\ima_rw.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
-    <ClInclude Include="adpcm.h">
+    <ClInclude Include="..\libsox\adpcm.h">
       <Filter>Header Files\Format handles and utils</Filter>
     </ClInclude>
     <ClInclude Include="..\custom-files\soxconfig.h">
